[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sermovie"
version = "0.5.0"
description = "Decoder for SER uncompressed video format used for astronomical capturing"
readme = "README.md"
authors = [{ name = "Sergio Díaz", email = "sergio.diaz.ruiz@gmail.com" }]
requires-python = ">=3.9"
keywords = ["astronomy", "video", "SER"]
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/sergio-dr/sermovie"