[metadata]

name = sermovie
version = attr: sermovie.__version__
author = Sergio Díaz
author_email = sergio.diaz.ruiz@gmail.com
description = SER File Decoder
long_description = file: README.md
keywords = astronomy, ser
license = GNU General Public License v3 (GPLv3)
classifiers =
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Image Processing",

[options]
python_requires = >=3.7
install_requires = numpy
